--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
 
         <title></title>
 
+        <style> body {
+            background-color: aquamarine !important;
+        }</style>
+
     </head>
 
     <body>
 
-        <header>
+        <header style="background-image: url('https://i.makeagif.com/media/8-13-2022/S7ecT8.gif');
+                        color: slateblue; padding-top: 20px; min-height:30%; text-align: center;">
 
             <h2>I am Chris</h2>
 
         </header>
 
     </body>
-    
+
 </html>
