Modified background pic

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
 
         <header style="background-image: url('https://i.makeagif.com/media/8-13-2022/S7ecT8.gif');
-                        color: slateblue; padding-top: 20px; min-height:30%; text-align: center;">
+                        color: slateblue; padding-top: 20px; min-height:30%; text-align: center; background-repeat: no-repeat;">
 
             <h2>I am Chris</h2>
 
